<package>
  <name>icclab_turtlebot</name>
  <version>0.0.0</version>
  <description>The icclab_turtlebot package</description>
  <maintainer email="todo@todo.todo">turtlebot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlebot3</run_depend>
  <run_depend>turtlebot3_navigation</run_depend>
  <run_depend>gmapping</run_depend>

</package>
